<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center"
    android:weightSum="1"
    android:divider="@android:color/background_dark"
    android:background="#7ffbff"
    android:paddingBottom="@android:dimen/app_icon_size">


    <TextView android:text="@string/project0_tittle" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
        android:textColor="#a98bff"
        android:id="@+id/projectTittle"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_weight="0.06" />

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/btnApp1"
        android:id="@+id/btnApp1"
        android:background="#ffc543"
        android:textColor="#fefdff"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:shadowColor="@android:color/holo_green_dark" />

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/btnApp2"
        android:id="@+id/btnApp2"
        android:background="#ffc543"
        android:textColor="#fefdff"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:shadowColor="@android:color/holo_green_dark"/>
    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/btnApp3"
        android:id="@+id/btnApp3"
        android:background="#ffc543"
        android:textColor="#fefdff"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:shadowColor="@android:color/holo_green_dark"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/btnApp4"
        android:id="@+id/btnApp4"
        android:background="#ffc543"
        android:textColor="#fefdff"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:shadowColor="@android:color/holo_green_dark"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/btnApp5"
        android:id="@+id/btnApp5"
        android:background="#ffc543"
        android:textColor="#fefdff"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:shadowColor="@android:color/holo_green_dark"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/btnApp6"
        android:id="@+id/btnApp6"
        android:background="#ffc543"
        android:textColor="#fefdff"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:shadowColor="@android:color/holo_green_dark"/>


    </LinearLayout>
